# django-leaflet

./: .coveragerc  .gitignore  .travis.yml  CHANGES  COPYRIGHT  MANIFEST.in  README.rst  pyproject.toml  quicktest.py  setup.py  tox.ini
.github/workflows/: python-app.yml
docs/: Makefile  advanced.rst  conf.py  index.rst  installation.rst  make.bat  templates.rst  widget.rst
example/: Dockerfile  README.rst  compose.yaml  manage.py  requirements.txt
example/mushrooms/: admin.py  models.py  settings.py  urls.py  wsgi.py
example/mushrooms/migrations/: 0001_initial.py
example/mushrooms/templates/: index.html
leaflet/: __init__.py  admin.py  apps.py  options.py  tests.py  utils.py  widgets.py
leaflet/forms/: backport.py  fields.py  nogeos.py  widgets.py
leaflet/locale/ar/LC_MESSAGES/: django.po
leaflet/locale/cs/LC_MESSAGES/: django.mo  django.po
leaflet/locale/de/LC_MESSAGES/: django.mo  django.po
leaflet/locale/es/LC_MESSAGES/: django.mo  django.po
leaflet/locale/fa/LC_MESSAGES/: django.po
leaflet/locale/fr/LC_MESSAGES/: django.mo  django.po
leaflet/locale/he/LC_MESSAGES/: django.mo  django.po
leaflet/locale/hu/LC_MESSAGES/: django.mo  django.po
leaflet/locale/it/LC_MESSAGES/: django.mo  django.po
leaflet/locale/ru/LC_MESSAGES/: django.mo  django.po
leaflet/locale/sk/LC_MESSAGES/: django.mo  django.po
leaflet/static/leaflet/: Control.MiniMap.js  leaflet-src.esm.js  leaflet-src.js  leaflet-src.js.map  leaflet-src.map  leaflet.css  leaflet.extras.css  leaflet.extras.js  leaflet.form.js  leaflet.forms.js  leaflet.js  leaflet.js.map  leaflet.mapinit.js  leaflet_django.css  proj4.js  proj4leaflet.js
leaflet/static/leaflet/draw/: leaflet.draw-src.js  leaflet.draw.i18n.js
leaflet/static/leaflet/wicket/: wicket-leaflet.js  wicket.js
leaflet/static/proj4js/: EPSG3857.js  EPSG4326.js
leaflet/templates/leaflet/: _leaflet_draw_i18n.js  _leaflet_map.html  css.html  head_fragment.html  js.html  leaflet.html  leaflet_draw_i18n.html  map_fragment.html  widget.html
leaflet/templates/leaflet/admin/: change_list_geo.html  leaflet.html  widget.html
leaflet/templatetags/: __init__.py  leaflet.py  leaflet_tags.py
leaflet/tests/: __init__.py  index.html  package.json  test.extras.js  test.forms.js  tests.py
